--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Consent Mode v2 + Banner -->
     <script defer src="consent.js"></script>
     <!-- Leaderboard System -->
-    <script src="leaderboard.js"></script>
+    <script src="leaderboard-system.js"></script>
     
     <!-- Google Search Console -->
     <meta name="google-site-verification" content="iyEAsCuQ7tncHUvc1e09D9gDHOt0nzPQByhGu1xzq54" />
