Implementar leaderboard global con JSONBin - puntuaciones sincronizadas entre dispositivos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- Consent Mode v2 + Banner -->
     <script defer src="consent.js"></script>
     <!-- Leaderboard System -->
+    <script src="leaderboard-global-working.js"></script>
     <script>
         // Leaderboard simple integrado
         console.log('Leaderboard system loading...');
