Fix leaderboard decoding errors by creating inline leaderboard file

--- a/index-backup.html
+++ b/index-backup.html
@@ -93,7 +93,7 @@
         })();
     </script>
     <!-- Leaderboard System -->
-    <script src="leaderboard-inline.js"></script>
+    <script src="leaderboard-unified.js"></script>
     <script>
         // Global leaderboard system loaded from external file
         console.log('Global leaderboard system loading...');
