--- a/index.html
+++ b/index.html
@@ -2030,5 +2030,8 @@
             }
         }
     </script>
+    
+    <!-- MONETAG MULTI TAG -->
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="176544" async data-cfasync="false"></script>
 </body>
 </html>
