--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- MONETAG VERIFICATION -->
     <meta name="monetag" content="94794112785173bc622ede8664561104">
     
+    <!-- Monetag Multi Tag (Smart Display) -->
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="177247" async data-cfasync="false"></script>
+    
     <!-- Google AdSense (deshabilitado hasta aprobación) -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837743291717475" crossorigin="anonymous"></script> -->
     <!-- Consent Mode v2 + Banner -->
